# blocks-plus-plus

./: LICENSE.txt  README.md
.github/workflows/: build.yaml  compile_godot.yaml  deploy.yaml  release.yaml  rust.yaml
deploy/docker/: README.md  docker-compose.yml  nginx.conf
deploy/godot/: custom.py  debug_custom.py  release_custom.py
deploy/netlify/: netlify.toml
deploy/templates/: readAsyncNew
godot/: export_presets.cfg  project.godot  rust.gdextension
godot/.godot/: .gitignore
godot/assets/: arrow.png.import  block.jpg.import  github.svg.import  solid_white.tres  splash.png.import  theme.tres
godot/assets/font/: Pixel.ttf.import  readme.txt
godot/assets/icons/: icon.icns  icon.png.import  package-lock.json
godot/scenes/: block.tscn  main.tscn  select.tscn
godot/scenes/birb/: birb.tscn  birb_board.tscn  pipe.tscn
godot/scenes/boards/: main.tscn  piece_select.tscn  tetris.tscn
godot/scenes/breakout/: ball.tscn  breakout_board.tscn  breakout_player.tscn  brick.tscn
godot/scenes/snek/: Goal.tscn  segment.tscn  snek_board.tscn
godot/scenes/ui/: hud.tscn  (+6 more)
rust/: Cargo.toml
rust/src/: birb.rs  block.rs  breakout.rs  constants.rs  hud.rs  lib.rs  main_board.rs  piece.rs  piece_select.rs  select.rs  snek.rs  tetris.rs  tetris_board.rs  ui.rs
rust/src/birb/: birb_board.rs  birb_player.rs  pipe.rs
rust/src/breakout/: ball.rs  breakout_board.rs  breakout_player.rs  brick.rs
rust/src/snek/: goal.rs  segment.rs  snek_board.rs
rust/src/tetris/: block.rs  piece.rs  select.rs  tetris_board.rs
rust/src/ui/: hud.rs  keymap_display.rs  state.rs
(+5 files in other folders)
