[package]
name = "blocks-plus-plus"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/julie-42/blocks-plus-plus"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0-alpha.1"

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]
