[package]
name = "blocks-plus-plus"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/julie-42/blocks-plus-plus"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0-alpha.1"
once_cell = "1.19.0"
phf = { version = "0.11.2" , features = ["macros"] }

[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master"
features = ["experimental-wasm", "lazy-function-tables"]
